TSPS-355 add in user quotas logic (#153)
Co-authored-by: Jose Soto <jsoto@broadinstitute.org>